--- a/MUA ACTIVIDADES/css/estilos.css
+++ b/MUA ACTIVIDADES/css/estilos.css
@@ -3,37 +3,41 @@
      padding: 0;
      -webkit-box-sizing:border-box;
      -moz-box-sizing:border-box;
-     box-sizing: border-box;  
+     box-sizing: border-box;
+
 
 }
 
 body{
-	background: #0b2027;
-	font-family:indie-flower;
-	line-height: 20px;
+	background: #8d7f93;
+	font-family:sans-serif;
+	line-height: 25px;
 }   
 
 a{
 	text-decoration: none;
-	color: #fff;
-
+	color: #462255;
 }
 
 .btn-menu {
-	display: none;
+	display: block;
 	padding: 20px;
-	background: #0d2c44;
-	color: #fff;
+	background: #b4bbc1;
+	color: #462255;
     
 }
 
+.btn-menu .icono{
+	float: right;
+}
+
 .contenedor-menu {
-	width: 100%;
-	min-width: 400px;
+	width: 20%;
+	min-width: 300px;
 	margin: 50px;
 	display: inline-block;
-	font-family:'https://fonts.google.com/?selection.family=Indie+Flower';
-	line-height: 20px;
+	font-family:'sans-serif';
+	line-height: 25px;
 
 }
 
@@ -46,21 +50,24 @@ a{
 }
 
  .contenedor-menu .menu li a{
- 	color: #494949;
+ 	color: #CFC3D4 ;
  	display: block;
  	padding: 20px 30px;
  	background: #e9e9e9;
 
  } 
-
+ 
+/*contenedor de iconos y menu*/
 .contenedor-menu .menu li a:hover{
-	background: #1a95d5;
-	color: #fff;
+	background: #8d7f93;
+	color: #462255;
+	font-size: 25px;
 }
 
-.contenedor-menu .menu .icono {
+.contenedo-menu .menu .icono {
+	font-size: 20px;
+	line-height: 25px;
 	font-size: 25px;
-	line-height: 18px;
 
 
 }
@@ -76,18 +83,39 @@ a{
 	margin-left: 15px;
 
 }
-
 .contenedor-menu .menu ul{
-	/*display: none;*/
+     display: none;
 }
 
 .contenedor-menu .menu ul li a{
-	background: #424242;
+	background: #4b1b56;
 	color: #e9e9e9;
 
 }
-.contenedor-menu .activado > a {
-     
+.contenedor-menu .menu .activado > a {
+     background: #1a95d5;
+     color:#CFC3D4;
+ 
+}
 
+@media screen and (max-width-max: 450px){
+	body{
+		padding-top: 80px: 
+	}
+	.contenedor-menu{
+		margin: 0;
+		width: 100%;
+		position: fixed;
+		top: 0;
+		z-index:1000;
+	}
+
+	.btn-menu{
+		display: none;
+	}
+	.contenedor-menu .menu {
+		display:none;
+	}
+	
 }
 
